@@ -86,13 +86,6 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
-		<!--alibaba的druid数据库连接池-->
-		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>druid-spring-boot-starter</artifactId>
-			<version>1.1.10</version>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -140,92 +133,6 @@
 			</testResource>
 		</testResources>
 
-		<plugins>
-			<!-- 工程编码插件 -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.0</version>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-					<encoding>UTF-8</encoding>
-				</configuration>
-			</plugin>
-			<!-- 生成javadoc插件 -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<configuration>
-					<charset>UTF-8</charset>
-					<encoding>UTF-8</encoding>
-				</configuration>
-			</plugin>
-			<!-- 打包java源码 -->
-			<plugin>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>2.2.1</version>
-				<configuration>
-					<attach>true</attach>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>compile</phase>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.6</version>
-				<configuration>
-					<encoding>UTF-8</encoding>
-				</configuration>
-			</plugin>
-			<!--<plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>sonar-maven-plugin</artifactId>
-                <version>2.6</version>
-            </plugin>-->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.12</version>
-				<configuration>
-					<argLine>-Xms512m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=128m</argLine>
-					<includes>
-						<include>com/haier/**/*Test*.java</include>
-					</includes>
-					<printSummary>true</printSummary>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-				<version>2.6</version>
-				<configuration>
-					<instrumentation>
-						<excludes>
-							<exclude>com/haier/**/action/**/*.class</exclude>
-							<exclude>com/haier/**/webapp/**/*.class</exclude>
-							<exclude>com/haier/**/interceptor/**/*.class</exclude>
-							<exclude>com/haier/**/taglib/**/*.class</exclude>
-							<exclude>com/haier/**/domain/**/*.class</exclude>
-							<exclude>com/haier/**/model/**/*.class</exclude>
-							<exclude>com/haier/**/dto/**/*.class</exclude>
-							<exclude>com/haier/**/util/DataFormat.class</exclude>
-						</excludes>
-					</instrumentation>
-					<formats>
-						<format>xml</format>
-					</formats>
-				</configuration>
-			</plugin>
-		</plugins>
 	</build>
 
 </project>
